src/lib/lang/LudiParser.ts
// Generated from src/lib/lang/Ludi.g4 by ANTLR 4.13.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LudiListener from "./LudiListener.js";
import LudiVisitor from "./LudiVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LudiParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly IDENTIFIER = 36;
	public static readonly NUMBER = 37;
	public static readonly WS = 38;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_game = 0;
	public static readonly RULE_definition = 1;
	public static readonly RULE_action = 2;
	public static readonly RULE_trigger = 3;
	public static readonly RULE_win = 4;
	public static readonly RULE_loss = 5;
	public static readonly RULE_setup = 6;
	public static readonly RULE_kind = 7;
	public static readonly RULE_state_definition = 8;
	public static readonly RULE_statement = 9;
	public static readonly RULE_when = 10;
	public static readonly RULE_condition = 11;
	public static readonly RULE_expression = 12;
	public static readonly RULE_lvalue = 13;
	public static readonly RULE_typeExpression = 14;
	public static readonly RULE_identifier = 15;
	public static readonly RULE_number = 16;
	public static readonly literalNames: (string | null)[] = [ null, "'action'", 
                                                            "'('", "','", 
                                                            "')'", "':'", 
                                                            "'trigger'", 
                                                            "'win'", "'loss'", 
                                                            "'setup'", "'kind'", 
                                                            "'state'", "'change'", 
                                                            "'to'", "'set'", 
                                                            "'increase'", 
                                                            "'by'", "'decrease'", 
                                                            "'if'", "'then'", 
                                                            "'end'", "'when'", 
                                                            "'not'", "'!'", 
                                                            "'or'", "'and'", 
                                                            "'='", "'!='", 
                                                            "'>'", "'<'", 
                                                            "'>='", "'<='", 
                                                            "'{'", "'}'", 
                                                            "'['", "']'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "IDENTIFIER", 
                                                             "NUMBER", "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"game", "definition", "action", "trigger", "win", "loss", "setup", "kind", 
		"state_definition", "statement", "when", "condition", "expression", "lvalue", 
		"typeExpression", "identifier", "number",
	];
	public get grammarFileName(): string { return "Ludi.g4"; }
	public get literalNames(): (string | null)[] { return LudiParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LudiParser.symbolicNames; }
	public get ruleNames(): string[] { return LudiParser.ruleNames; }
	public get serializedATN(): number[] { return LudiParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LudiParser._ATN, LudiParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public game(): GameContext {
		let localctx: GameContext = new GameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LudiParser.RULE_game);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 37;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4034) !== 0)) {
				{
				{
				this.state = 34;
				this.definition();
				}
				}
				this.state = 39;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 40;
			this.match(LudiParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public definition(): DefinitionContext {
		let localctx: DefinitionContext = new DefinitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LudiParser.RULE_definition);
		try {
			this.state = 49;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 42;
				this.action();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 43;
				this.setup();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 44;
				this.trigger();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 45;
				this.win();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 46;
				this.loss();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 47;
				this.kind();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 48;
				this.state_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public action(): ActionContext {
		let localctx: ActionContext = new ActionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, LudiParser.RULE_action);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 51;
			this.match(LudiParser.T__0);
			this.state = 52;
			localctx._name = this.identifier();
			this.state = 53;
			this.match(LudiParser.T__1);
			this.state = 62;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===36) {
				{
				this.state = 54;
				localctx._identifier = this.identifier();
				localctx._args.push(localctx._identifier);
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===3) {
					{
					{
					this.state = 55;
					this.match(LudiParser.T__2);
					this.state = 56;
					localctx._identifier = this.identifier();
					localctx._args.push(localctx._identifier);
					}
					}
					this.state = 61;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 64;
			this.match(LudiParser.T__3);
			this.state = 65;
			this.match(LudiParser.T__4);
			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===21) {
				{
				{
				this.state = 66;
				localctx._when = this.when();
				localctx._conditions.push(localctx._when);
				}
				}
				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 72;
				this.statement();
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 446464) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public trigger(): TriggerContext {
		let localctx: TriggerContext = new TriggerContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, LudiParser.RULE_trigger);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 77;
			this.match(LudiParser.T__5);
			this.state = 78;
			localctx._name = this.identifier();
			this.state = 79;
			this.match(LudiParser.T__1);
			this.state = 88;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===36) {
				{
				this.state = 80;
				localctx._identifier = this.identifier();
				localctx._args.push(localctx._identifier);
				this.state = 85;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===3) {
					{
					{
					this.state = 81;
					this.match(LudiParser.T__2);
					this.state = 82;
					localctx._identifier = this.identifier();
					localctx._args.push(localctx._identifier);
					}
					}
					this.state = 87;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 90;
			this.match(LudiParser.T__3);
			this.state = 91;
			this.match(LudiParser.T__4);
			this.state = 95;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===21) {
				{
				{
				this.state = 92;
				localctx._when = this.when();
				localctx._conditions.push(localctx._when);
				}
				}
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 99;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 98;
				this.statement();
				}
				}
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 446464) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public win(): WinContext {
		let localctx: WinContext = new WinContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, LudiParser.RULE_win);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 103;
			this.match(LudiParser.T__6);
			this.state = 104;
			localctx._name = this.identifier();
			this.state = 105;
			this.match(LudiParser.T__1);
			this.state = 114;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===36) {
				{
				this.state = 106;
				localctx._identifier = this.identifier();
				localctx._args.push(localctx._identifier);
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===3) {
					{
					{
					this.state = 107;
					this.match(LudiParser.T__2);
					this.state = 108;
					localctx._identifier = this.identifier();
					localctx._args.push(localctx._identifier);
					}
					}
					this.state = 113;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 116;
			this.match(LudiParser.T__3);
			this.state = 117;
			this.match(LudiParser.T__4);
			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===21) {
				{
				{
				this.state = 118;
				localctx._when = this.when();
				localctx._conditions.push(localctx._when);
				}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public loss(): LossContext {
		let localctx: LossContext = new LossContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, LudiParser.RULE_loss);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 124;
			this.match(LudiParser.T__7);
			this.state = 125;
			localctx._name = this.identifier();
			this.state = 126;
			this.match(LudiParser.T__1);
			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===36) {
				{
				this.state = 127;
				localctx._identifier = this.identifier();
				localctx._args.push(localctx._identifier);
				this.state = 132;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===3) {
					{
					{
					this.state = 128;
					this.match(LudiParser.T__2);
					this.state = 129;
					localctx._identifier = this.identifier();
					localctx._args.push(localctx._identifier);
					}
					}
					this.state = 134;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 137;
			this.match(LudiParser.T__3);
			this.state = 138;
			this.match(LudiParser.T__4);
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===21) {
				{
				{
				this.state = 139;
				localctx._when = this.when();
				localctx._conditions.push(localctx._when);
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public setup(): SetupContext {
		let localctx: SetupContext = new SetupContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, LudiParser.RULE_setup);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 145;
			this.match(LudiParser.T__8);
			this.state = 146;
			this.match(LudiParser.T__4);
			this.state = 148;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 147;
				this.statement();
				}
				}
				this.state = 150;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 446464) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public kind(): KindContext {
		let localctx: KindContext = new KindContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, LudiParser.RULE_kind);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 152;
			this.match(LudiParser.T__9);
			this.state = 153;
			localctx._name = this.identifier();
			this.state = 154;
			this.match(LudiParser.T__4);
			this.state = 155;
			this.typeExpression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public state_definition(): State_definitionContext {
		let localctx: State_definitionContext = new State_definitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, LudiParser.RULE_state_definition);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 157;
			this.match(LudiParser.T__10);
			this.state = 158;
			localctx._name = this.identifier();
			this.state = 159;
			this.match(LudiParser.T__4);
			this.state = 160;
			this.typeExpression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, LudiParser.RULE_statement);
		let _la: number;
		try {
			this.state = 192;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 12:
				localctx = new ChangeStatementContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 162;
				this.match(LudiParser.T__11);
				this.state = 163;
				this.lvalue();
				this.state = 164;
				this.match(LudiParser.T__12);
				this.state = 165;
				this.expression();
				}
				break;
			case 14:
				localctx = new SetStatementContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 167;
				this.match(LudiParser.T__13);
				this.state = 168;
				this.lvalue();
				this.state = 169;
				this.match(LudiParser.T__12);
				this.state = 170;
				this.expression();
				}
				break;
			case 15:
				localctx = new IncreaseStatementContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 172;
				this.match(LudiParser.T__14);
				this.state = 173;
				this.lvalue();
				this.state = 174;
				this.match(LudiParser.T__15);
				this.state = 175;
				this.expression();
				}
				break;
			case 17:
				localctx = new DecreaseStatementContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 177;
				this.match(LudiParser.T__16);
				this.state = 178;
				this.lvalue();
				this.state = 179;
				this.match(LudiParser.T__15);
				this.state = 180;
				this.expression();
				}
				break;
			case 18:
				localctx = new IfStatementContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 182;
				this.match(LudiParser.T__17);
				this.state = 183;
				this.condition(0);
				this.state = 184;
				this.match(LudiParser.T__18);
				this.state = 186;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 185;
					this.statement();
					}
					}
					this.state = 188;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 446464) !== 0));
				this.state = 190;
				this.match(LudiParser.T__19);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public when(): WhenContext {
		let localctx: WhenContext = new WhenContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, LudiParser.RULE_when);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 194;
			this.match(LudiParser.T__20);
			this.state = 195;
			this.condition(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public condition(): ConditionContext;
	public condition(_p: number): ConditionContext;
	// @RuleVersion(0)
	public condition(_p?: number): ConditionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: ConditionContext = new ConditionContext(this, this._ctx, _parentState);
		let _prevctx: ConditionContext = localctx;
		let _startState: number = 22;
		this.enterRecursionRule(localctx, 22, LudiParser.RULE_condition, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 224;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 19, this._ctx) ) {
			case 1:
				{
				localctx = new NegationContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 198;
				_la = this._input.LA(1);
				if(!(_la===22 || _la===23)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 199;
				this.condition(9);
				}
				break;
			case 2:
				{
				localctx = new ComparisonContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 200;
				(localctx as ComparisonContext)._left = this.expression();
				this.state = 201;
				(localctx as ComparisonContext)._operator = this.match(LudiParser.T__25);
				this.state = 202;
				(localctx as ComparisonContext)._right = this.expression();
				}
				break;
			case 3:
				{
				localctx = new ComparisonContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 204;
				(localctx as ComparisonContext)._left = this.expression();
				this.state = 205;
				(localctx as ComparisonContext)._operator = this.match(LudiParser.T__26);
				this.state = 206;
				(localctx as ComparisonContext)._right = this.expression();
				}
				break;
			case 4:
				{
				localctx = new ComparisonContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 208;
				(localctx as ComparisonContext)._left = this.expression();
				this.state = 209;
				(localctx as ComparisonContext)._operator = this.match(LudiParser.T__27);
				this.state = 210;
				(localctx as ComparisonContext)._right = this.expression();
				}
				break;
			case 5:
				{
				localctx = new ComparisonContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 212;
				(localctx as ComparisonContext)._left = this.expression();
				this.state = 213;
				(localctx as ComparisonContext)._operator = this.match(LudiParser.T__28);
				this.state = 214;
				(localctx as ComparisonContext)._right = this.expression();
				}
				break;
			case 6:
				{
				localctx = new ComparisonContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 216;
				(localctx as ComparisonContext)._left = this.expression();
				this.state = 217;
				(localctx as ComparisonContext)._operator = this.match(LudiParser.T__29);
				this.state = 218;
				(localctx as ComparisonContext)._right = this.expression();
				}
				break;
			case 7:
				{
				localctx = new ComparisonContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 220;
				(localctx as ComparisonContext)._left = this.expression();
				this.state = 221;
				(localctx as ComparisonContext)._operator = this.match(LudiParser.T__30);
				this.state = 222;
				(localctx as ComparisonContext)._right = this.expression();
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 234;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 21, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 232;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 20, this._ctx) ) {
					case 1:
						{
						localctx = new ConjunctionContext(this, new ConditionContext(this, _parentctx, _parentState));
						(localctx as ConjunctionContext)._left = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, LudiParser.RULE_condition);
						this.state = 226;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 227;
						(localctx as ConjunctionContext)._operator = this.match(LudiParser.T__23);
						this.state = 228;
						(localctx as ConjunctionContext)._right = this.condition(9);
						}
						break;
					case 2:
						{
						localctx = new ConjunctionContext(this, new ConditionContext(this, _parentctx, _parentState));
						(localctx as ConjunctionContext)._left = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, LudiParser.RULE_condition);
						this.state = 229;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 230;
						(localctx as ConjunctionContext)._operator = this.match(LudiParser.T__24);
						this.state = 231;
						(localctx as ConjunctionContext)._right = this.condition(8);
						}
						break;
					}
					}
				}
				this.state = 236;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 21, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, LudiParser.RULE_expression);
		let _la: number;
		try {
			this.state = 257;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 24, this._ctx) ) {
			case 1:
				localctx = new ParenthizedExpressionContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 237;
				this.match(LudiParser.T__1);
				this.state = 238;
				this.expression();
				this.state = 239;
				this.match(LudiParser.T__3);
				}
				break;
			case 2:
				localctx = new IdentifierExpressionContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 241;
				this.lvalue();
				}
				break;
			case 3:
				localctx = new NumberExpressionContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 242;
				this.match(LudiParser.NUMBER);
				}
				break;
			case 4:
				localctx = new FunctionCallExpressionContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 243;
				this.identifier();
				this.state = 244;
				this.match(LudiParser.T__1);
				this.state = 253;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===2 || _la===36 || _la===37) {
					{
					this.state = 245;
					(localctx as FunctionCallExpressionContext)._expression = this.expression();
					(localctx as FunctionCallExpressionContext)._args.push((localctx as FunctionCallExpressionContext)._expression);
					this.state = 250;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===3) {
						{
						{
						this.state = 246;
						this.match(LudiParser.T__2);
						this.state = 247;
						(localctx as FunctionCallExpressionContext)._expression = this.expression();
						(localctx as FunctionCallExpressionContext)._args.push((localctx as FunctionCallExpressionContext)._expression);
						}
						}
						this.state = 252;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}
